Output adjustments, tentative clear screen implemented